--- a/test.css
+++ b/test.css
@@ -1,3 +1,7 @@
 #app>div.page-container>ytm-browse>ytm-single-column-browse-results-renderer>div>div>ytm-tab-renderer>ytm-section-list-renderer>lazy-list>ytm-item-section-renderer:nth-child(2)>lazy-list>ytm-reel-shelf-renderer {
   display: none;
 }
+
+grid-shelf-view-model.ytGridShelfViewModelHost {
+    display: none;
+}
